# quarto-tech-memo

./: .gitignore  README.md  cookiecutter.json  md2memo.py  pyproject.toml  quarto_tech_memo.py  tasks.py
.github/workflows/: release.yml
_extensions/: custom.lua  dev.md  shortcodes.lua
_extensions/ieee/: _extension.yml  custom.lua  dev.md  ieee-preamble.tex  ieee-template.tex  shortcodes.lua
_extensions/memo1/: _extension.yml  custom.lua  dev.md  typst-show.typ  typst-template.typ
_extensions/memo2/: _extension.yml  custom.lua  shortcodes.lua  typst-show.typ  typst-template.typ
_extensions/poster/: _extension.yml  custom.lua  shortcodes.lua  typst-show.typ  typst-template.typ
_extensions/slides/: _extension.yml  custom.lua  typst-template.typ
src/quarto_tech_memo/: quarto_tech_memo.py
{{cookiecutter.directory}}/: {{cookiecutter.filename}}.md
