[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quarto-tech-memo"
version = "0.3.1"
description = "A CLI script to convert a markdown note to a polished PDF tech memo using Quarto."
authors = [{ name = "Gaël Close", email = "closega@gmail.com" }]
requires-python = ">=3.8"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "typer"]

[project.scripts]
quarto-tech-memo= "quarto_tech_memo.quarto_tech_memo:app"

[project.urls]
"Source" = "https://github.com/gael-close/quarto-tech-memo"

# --- Pixi Configuration ---
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.package]
name = "quarto-tech-memo"
version = "0.3.1"

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "0.1.*" }

[tool.pixi.package.host-dependencies]
setuptools = ">=61.0.0"

[tool.pixi.package.run-dependencies]
python = ">=3.8"
typer = "*"
